; ModuleID = '/home/carl/AnghaBench/esp-idf/components/driver/test/extr_test_timer.c_all_timer_set_divider.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/driver/test/extr_test_timer.c_all_timer_set_divider.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TIMER_GROUP_0 = common dso_local global i32 0, align 4
@TIMER_0 = common dso_local global i32 0, align 4
@ESP_OK = common dso_local global i64 0, align 8
@TIMER_1 = common dso_local global i32 0, align 4
@TIMER_GROUP_1 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @all_timer_set_divider to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @all_timer_set_divider(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @TIMER_GROUP_0, align 4
  %5 = load i32, i32* @TIMER_0, align 4
  %6 = load i32, i32* %2, align 4
  %7 = call i64 @timer_set_divider(i32 %4, i32 %5, i32 %6)
  store i64 %7, i64* %3, align 8
  %8 = load i64, i64* %3, align 8
  %9 = load i64, i64* @ESP_OK, align 8
  %10 = icmp eq i64 %8, %9
  %11 = zext i1 %10 to i32
  %12 = call i32 @TEST_ASSERT(i32 %11)
  %13 = load i32, i32* @TIMER_GROUP_0, align 4
  %14 = load i32, i32* @TIMER_1, align 4
  %15 = load i32, i32* %2, align 4
  %16 = call i64 @timer_set_divider(i32 %13, i32 %14, i32 %15)
  store i64 %16, i64* %3, align 8
  %17 = load i64, i64* %3, align 8
  %18 = load i64, i64* @ESP_OK, align 8
  %19 = icmp eq i64 %17, %18
  %20 = zext i1 %19 to i32
  %21 = call i32 @TEST_ASSERT(i32 %20)
  %22 = load i32, i32* @TIMER_GROUP_1, align 4
  %23 = load i32, i32* @TIMER_0, align 4
  %24 = load i32, i32* %2, align 4
  %25 = call i64 @timer_set_divider(i32 %22, i32 %23, i32 %24)
  store i64 %25, i64* %3, align 8
  %26 = load i64, i64* %3, align 8
  %27 = load i64, i64* @ESP_OK, align 8
  %28 = icmp eq i64 %26, %27
  %29 = zext i1 %28 to i32
  %30 = call i32 @TEST_ASSERT(i32 %29)
  %31 = load i32, i32* @TIMER_GROUP_1, align 4
  %32 = load i32, i32* @TIMER_1, align 4
  %33 = load i32, i32* %2, align 4
  %34 = call i64 @timer_set_divider(i32 %31, i32 %32, i32 %33)
  store i64 %34, i64* %3, align 8
  %35 = load i64, i64* %3, align 8
  %36 = load i64, i64* @ESP_OK, align 8
  %37 = icmp eq i64 %35, %36
  %38 = zext i1 %37 to i32
  %39 = call i32 @TEST_ASSERT(i32 %38)
  ret void
}

declare dso_local i64 @timer_set_divider(i32, i32, i32) #1

declare dso_local i32 @TEST_ASSERT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
